# template-uv-mcp-server

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/template_uv_mcp_server/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_server.py
