[project]
name = "template-uv-mcp-server"
version = "0.1.0"
description = "A reusable template for MCP servers using uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
template-uv-mcp-server = "template_uv_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_uv_mcp_server"]
